# Klaro

./: .env.example  .gitignore  .prettierignore  .renderignore  ARCHITECTURE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml  turbo.json
.github/workflows/: ci.yml
apps/api/: .env.example  .eslintrc.cjs  package.json  tsconfig.json
apps/api/src/: app.ts  index.ts
apps/api/src/config/: env.ts
apps/api/src/lib/: crypto.ts  logger.ts
apps/api/src/middleware/: auth.ts  error.ts  rate-limit.ts  validate.ts
apps/api/src/routes/: auth.routes.ts  bank.routes.ts  chat.routes.ts  documents.routes.ts  kyc.routes.ts  score.routes.ts  scrape.routes.ts  transactions.routes.ts
apps/api/src/services/: anthropic.ts  ml.client.ts  supabase.ts
apps/api/src/services/scraping/: orchestrator.ts
apps/api/src/types/: express.d.ts
apps/backend/: package.json  tsup.config.ts
apps/backend/src/: app.ts
apps/backend/src/config/: env.ts
apps/backend/src/middleware/: auth.ts  bank-api-key.ts
apps/backend/src/routes/: bank.public.routes.ts  bank.routes.ts  banks.routes.ts  chat.routes.ts  documents.routes.ts  kyc.routes.ts  me.routes.ts  score.routes.ts  scrape.routes.ts  v1.bank.routes.ts
apps/backend/src/services/: audit.service.ts  bank.resolver.ts  kyc.service.ts  ml.client.ts  score.service.ts  statement.service.ts
apps/backend/src/services/scraping/: orchestrator.ts
apps/backend/src/types/: express.d.ts
apps/frontend/: package.json
apps/frontend/src/app/: globals.css  layout.tsx
apps/frontend/src/app/(app)/: layout.tsx
apps/frontend/src/app/(auth)/: layout.tsx
apps/frontend/src/app/(marketing)/: layout.tsx  page.tsx
apps/ml/: .env.example  README.md  package.json  pyproject.toml
apps/ml/src/klaro_ml/: __init__.py  main.py  settings.py
apps/ml/src/klaro_ml/data/: __init__.py  salary_bands_tn.py
apps/ml/src/klaro_ml/kyc/: __init__.py  face.py  face_detect.py  haiku_parser.py  liveness.py  ocr.py  vision_extractor.py  vision_liveness.py
apps/ml/src/klaro_ml/routes/: kyc.py  ocr.py  score.py  statements.py
apps/ml/src/klaro_ml/scoring/: __init__.py  anomaly_detector.py  compose.py  context_builder.py  data_checker.py  impact_estimator.py  llm_scorer.py  rule_scorecard.py
apps/ml/src/klaro_ml/statements/: __init__.py  anomaly.py  authenticity.py  consistency.py  deepfake.py  extractor.py  income_plausibility.py  reasoner.py
apps/ml/src/klaro_ml/statements/forensics/: __init__.py  image_forensics.py  pdf_structure.py  rule_engine.py  vision_ensemble.py
apps/ml/src/klaro_ml/utils/: __init__.py  web_search.py
apps/ml/tests/: test_data_checker.py  test_health.py  test_ocr_extract.py
apps/web/: .env.example  .eslintrc.cjs  next.config.ts  tailwind.config.ts  tsconfig.json
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/(app)/: layout.tsx
apps/web/src/components/: providers.tsx
apps/web/src/lib/: api.server.ts  api.ts  auth.ts  env.ts
docs/: branch-feature-deepfake.md  deployment-render.md  render-deploy-checklist.md
infra/docker/: api.Dockerfile  ml.Dockerfile  scraper.Dockerfile  web.Dockerfile
supabase/: config.toml  seed.sql
supabase/migrations/: 0001_init.sql  0002_storage.sql  0003_roles.sql  0005_bank_portal.sql  0006_bank_statements.sql  0007_statement_review.sql  0008_transactions_statement_id.sql  0009_chat_sessions_and_memory.sql  0010_profile_context.sql  0011_banks.sql  0012_bank_dashboard.sql  0013_bank_api_keys.sql
supabase/snippets/: Untitled query 561.sql
(+78 files in other folders)
