[project]
name = "klaro-ml"
version = "0.1.0"
description = "Klaro ML sidecar — scoring, KYC, OCR (FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.7.0",
    "numpy>=1.26.4",
    "anthropic>=0.42.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
ml = [
    "pyod>=2.0.2",
    "scikit-learn>=1.5.2",
]
kyc = [
    # Heavy. Installed only when building the full container image.
    "paddleocr>=2.9.1",
    "mediapipe>=0.10.18",
    "facenet-pytorch>=2.6.0",
]
dev = [
    "ruff>=0.8.4",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/klaro_ml"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
