[project]
name = "klaro-ml"
version = "0.1.0"
description = "Klaro ML sidecar — scoring, KYC, OCR (FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.7.0",
    "numpy>=1.26.4",
    "anthropic>=0.42.0",
    "supabase>=2.0.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
ml = [
    "pyod>=2.0.2",
    "scikit-learn>=1.5.2",
]
kyc = [
    # Heavy. Installed only when building the full container image.
    "setuptools>=75.0.0",   # paddlepaddle imports setuptools at runtime
    "paddlepaddle>=2.6.2",
    "paddleocr>=2.9.1",
    "mediapipe>=0.10.18",
    "facenet-pytorch>=2.6.0",
    "opencv-python-headless>=4.10.0",
]
statements = [
    # PDF text extraction + page rendering (no system poppler needed)
    "pymupdf>=1.24.0",
    # PDF content-stream / structural inspection for Layer 1 forensics
    "pdfminer.six>=20240706",
    # CSV / Excel parsing
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    # Image byte utilities + pixel-level forensics (ELA, FFT, noise)
    "pillow>=10.0.0",
    "opencv-python-headless>=4.10.0",
    # Web search for Layer 3 consistency check (optional at runtime)
    "tavily-python>=0.3.0",
    # Supabase client for Storage downloads inside the ML service
    "supabase>=2.0.0",
]
dev = [
    "ruff>=0.8.4",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/klaro_ml"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
